<resources>
    <string name="app_name">Timely</string>

    <!--Onboarding Strings-->
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="title_activity_main">MainActivity</string>

    <!--Bottom Nav Tabs-->
    <string name="profile">Profile</string>
    <string name="feed">Feed</string>
    <string name="messages">Messages</string>

    <!--User Error Messages-->
    <string name="email_failure">Please enter a valid email</string>
    <string name="password_failure">The password must be at least 7 characters</string>
    <string name="login_failed">Login Failed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_underline"><u>Log In</u></string>
    <string name="sign_up_underline"><u>Sign Up</u> </string>
    <string name="already_have_account_text">Already have and account?\u0020</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    
    <string name="strikes_template">Strikes: {amount}</string>
    <string name="wins_template">Wins: {amount}</string>

    <string name="no_account_text">Don\'t have an account?\u0020</string>

</resources>
