<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="54dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/sign_up"/>
        <Button
            android:id="@+id/log_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/sign_up_button"
            app:layout_constraintEnd_toEndOf="@id/sign_up_button"
            app:layout_constraintTop_toBottomOf="@id/sign_up_button"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/focus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/sign_up_button"
            app:layout_constraintEnd_toEndOf="@id/sign_up_button"
            app:layout_constraintBottom_toTopOf="@id/sign_up_button"
            android:layout_marginBottom="67dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TimelyTitleStyle"
            android:gravity="center_horizontal"/>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>