<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sign_up_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginStart="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="110dp"
            android:text="@string/sign_up"
            android:textAppearance="@style/TimelyTitleStyle"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/email_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="23sp"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_header"
            app:layout_constraintStart_toStartOf="@+id/sign_up_header"
            android:layout_marginBottom="3dp"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/email_hint"
            android:layout_marginTop="12dp"
            android:background="@color/standardGray"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/password_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="23sp"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
            app:layout_constraintStart_toStartOf="@+id/sign_up_header"
            android:layout_marginBottom="3dp"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="40dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/password_hint"
            android:background="@color/standardGray"
            android:singleLine="true"/>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text"
            android:layout_marginBottom="54dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/next"/>

        <LinearLayout
            android:id="@+id/login_container"
            android:layout_height="54dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/standardGray">

            <TextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_gravity="center_vertical"
                android:text="@string/already_have_account_text"/>

            <TextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
